syntax = "proto3";
option java_multiple_files = true;  // generate a separate .java file for each top-level message
package com.badasstechie.product.grpc;  // package name used for generated sources

service ProductGrpcService {
  rpc getProductDetails (ProductDetailsRequest) returns (ProductDetailsResponse) {}
}

message ProductDetailsRequest {
  repeated string ids = 1;
}

message ProductDetailsResponse {
  repeated ProductDetails productDetails = 1;
}

message ProductDetails {
  string id = 1;
  string name = 2;
  uint32 price = 3;
  int32 stock = 4;
}
